@@ -1,4 +1,7 @@
 TRUNK
+  - Unified command-line interface to web app, builder and add_project script
+  - Bugfix: builder invoking Rake with RAILS_ENV OS variable set to 'builder'
+  - Bugfix: not all Windows installations have rake.cmd
   
 --------------------------------------------------------------------------------
 * 0.1 
